// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1w956hh=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots appearance primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1jggn18=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots as link default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <a
      data-css-gukh6t=""
      disabled={false}
      href="https://duckduckgo.com"
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click as link
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots as link with icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <a
      data-css-1ak4m0j=""
      disabled={false}
      href="https://duckduckgo.com"
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="pencil icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Click as link
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots disabled flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-89vhb7=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots disabled primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-15c311w=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots disabled stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-bgorl0=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots disabled with icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-iavvef=""
      disabled={true}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="pencil icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1ph61im=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-355vri=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon left 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1ak4m0j=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone flat large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-zgn0vq=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone flat medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-icli51=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone flat small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-nml72w=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone flat xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1i8p08p=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1faf6pt"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone primary large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-pjxwt9=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone primary medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1qepb4e=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone primary small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-4uig72=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone primary xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-exn4cd=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1faf6pt"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone stroke large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1y6ncdd=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone stroke medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-s2knv0=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone stroke small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1bh79r6=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon lone stroke xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-18ibw8n=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1faf6pt"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots icon medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1ak4m0j=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1ak4m0j=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon right 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-dj1kqf=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-8b1vtw=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-tz6omh=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-pimj8i=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1t91op8=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1faf6pt"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With Icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-10it3c9=""
      disabled={true}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <span
            data-css-1ec065u=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Loading...
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1pn6jll=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <span
            data-css-10bxom6=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Loading...
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading lone icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-pjxwt9=""
      disabled={true}
      style={Object {}}
    >
      <div
        data-css-y80vay=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <span
            data-css-10bxom6=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots loading medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <span
            data-css-10bxom6=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Loading...
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading no icon, hidden text 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1pn6jll=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Text doesnt show when loading if no icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1pn6jll=""
      disabled={true}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <span
            data-css-10bxom6=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Loading...
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1phrwsv=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <span
            data-css-10bxom6=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Loading...
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-iy49zs=""
      disabled={true}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <span
            data-css-1jut5p0=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Loading...
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots loading xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-12rwiei=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1faf6pt"
        >
          <span
            data-css-10bxom6=""
          />
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Loading...
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots override styles with className 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      className={
        Object {
          "data-css-jxpnuu": "",
        }
      }
      data-css-1ak4m0j=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Green Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots override styles with style 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1ak4m0j=""
      disabled={false}
      style={
        Object {
          "background": "red",
        }
      }
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Red Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots props pass through aria-expanded 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      aria-expanded={true}
      data-css-gukh6t=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        aria-expanded
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots props pass through data-something 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      data-something="wow"
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Custom data attributes
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots props pass through not supported 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      disabled={false}
      onMouseOver={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Should not mouseover
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots props pass through role 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      disabled={false}
      role="link"
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Role Link
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots props pass through title 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      disabled={false}
      style={Object {}}
      title="My caption"
    >
      <span
        data-css-15b13by=""
      >
        With title
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1pn6jll=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1phrwsv=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots size xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-12rwiei=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots with onClick clicks once 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-1ak4m0j=""
      disabled={false}
      onClick={[Function]}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Clicks once
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots with ref ref to handle focus 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    test-decorator-center={true}
  >
    <button
      data-css-gukh6t=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Should be focused
      </span>
    </button>
  </div>
</div>
`;
